# dde-shell

example/: CMakeLists.txt
example/appearance-opacity-example/: CMakeLists.txt  collect-opacity-logs.sh  framebufferprobe.cpp  framebufferprobe.h  main.cpp  main.qml  opacitymonitor.cpp  opacitymonitor.h  qml.qrc
